# agents_g10

./: .env.example  .gitignore  README.md  gen_prompt.py  grader.py  helper.py  pyproject.toml  tasks_description.json  tasks_example.json  tool_schema.json
agents/: __init__.py
agents/pta_agent/: __init__.py  action_selector.py  cli.py  execution.py  json_utils.py  mcp_client.py  models.py  openclaw_baseline.py  policy.py  providers.py  runner.py  safety_probe.py  security_benchmark.py  security_prompts.py  state.py  task_interpreter.py  task_router.py  trace.py  verifier.py
agents/pta_agent/tests/: __init__.py  test_action_selector.py  test_anthropic_prompt.py  test_grader_metrics.py  test_openclaw_baseline.py  test_runner.py  (+4 more)
baselines/openclaw/: .gitignore  package-lock.json  package.json
fixtures/: task_01_fixture.json
mcp-server/: README.md  main.py  main_ex.py  pyproject.toml
mcp-server/data/: task_01.json  task_02.json  task_03.json  task_04.json  task_05_01.json  task_05_02.json
mcp-server/resource_data/: appointment_intake_brief.json  return_authorization_brief.json  security_injected_task_brief.json  task_01.json  task_02.json  task_03.json  task_04.json  task_05_01.json  task_05_02.json  task_06.json  task_07.json  task_08.json  task_09.json  task_10.json  vendor_travel_brief.json
outputs/sessions/: full_agent_comparison.json  model_comparison.json  openclaw_deep_trace_analysis.json  safety_guardrail_proof.json  security_prompt_comparison.json  security_prompt_comparison_by_scenario.json
tasks/: task_01.json
tools/: example_tool.json
(+972 files in other folders)
